...
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ubusetas.ubu.adrian.proyectoubusetas.clavedicotomica.MostrarClaves"
    tools:showIn="@layout/layout_mostrar_claves">

    <TextView
        android:id="@+id/textView_contenido_mostrar_claves"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_informativo_mostrar_claves"

        android:textColor="@color/black" />

...
